--- a/media.html
+++ b/media.html
@@ -2,61 +2,62 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>media query</title>
-    <style>
-        .box {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-        }
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>media query</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <style>
+    .box {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+    }
 
-        .img {
-            height: 200px;
-            background-image: url(imgs/demo.jpg);
-            background-size: cover;
-        }
+    .img {
+      height: 200px;
+      background-image: url(imgs/demo.jpg);
+      background-size: cover;
+    }
 
-        @media (max-width:1024px) {
-            .box {
-                grid-template-columns: repeat(3, 1fr);
-            }
-        }
+    @media (max-width:1024px) {
+      .box {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
 
-        @media (max-width:768px) {
-            .box {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
+    @media (max-width:768px) {
+      .box {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
 
-        @media (max-width:375px) {
-            .box {
-                grid-template-columns: repeat(1, 1fr);
-            }
-        }
-    </style>
+    @media (max-width:375px) {
+      .box {
+        grid-template-columns: repeat(1, 1fr);
+      }
+    }
+  </style>
 </head>
 
 <body>
-    <div class="box">
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-    </div>
+  <div class="box">
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+    <div class="img"></div>
+  </div>
 
 </body>
 
